# TaskScheduler

./: CMakeLists.txt  Jenkinsfile  README.md  file-test  main.cpp
src/: CMakeLists.txt  HitachiPlugin.cpp  HitachiPlugin.h  HitachiScheduler.cpp  HitachiScheduler.h  SchedulingAlgorithm.cpp  SchedulingAlgorithm.h  Task.cpp  Task.h  main.cpp
test/: CMakeLists.txt  HitachiPlugin_test.cpp  HitachiScheduler_test.cpp
testsAndRunLogs/: output.txt  testOutput.txt
